# ZSigner

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
zsigner/: __init__.py
