[project]
name = "zsigner"
version = "0.1.0"
description = "ZSigner: TikTok X-Bogus ve X-Gnarly signature generator"
authors = [
    { name = "Z4usXcode" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
