[project]
name = "ZSigner"
version = "0.1.0"
description = "Python package to generate TikTok X‑Bogus and X‑Gnarly signatures"
authors = [
  { name = "Z4usXcode", email = "your-email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  # Projede kullanılan kütüphaneler buraya eklenmeli, örnek:
  # "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
